// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Actions Action And Method 1`] = `
<button
  class="button"
  onclick={[Function]}
>
  Click me to log the action
</button>
`;

exports[`Storyshots Addons|Actions Action Only 1`] = `
<button
  class="button"
  onclick={[Function]}
>
  Click me to log the action
</button>
`;

exports[`Storyshots Addons|Actions Multiple Actions 1`] = `
<button
  class="button"
  onclick={[Function]}
  ondblclick={[Function]}
>
  (Double) click me to log the action
</button>
`;

exports[`Storyshots Addons|Actions Multiple Actions Object 1`] = `
<button
  class="button"
  onclick={[Function]}
  ondblclick={[Function]}
>
  (Double) click me to log the action
</button>
`;

exports[`Storyshots Addons|Backgrounds Example 1 1`] = `
<button
  class="button"
>
  You should be able to switch backgrounds for this story
</button>
`;

exports[`Storyshots Addons|Backgrounds Example 2 1`] = `
<button
  class="button"
>
  This one too!
</button>
`;

exports[`Storyshots Addons|Centered Button 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      class="button"
    >
      A button
    </button>
  </div>
</div>
`;

exports[`Storyshots Addons|Contexts Simple Css Theming 1`] = `
<div
  style={
    Object {
      "background": "#173F5F",
      "color": "white",
      "height": "100vh",
      "padding": "10px",
    }
  }
>
  <div>
    I'm a children of the injected 'div' (where provides a theming context).
  </div>
</div>
`;

exports[`Storyshots Addons|Knobs All Knobs 1`] = `
<div
  style="border:2px dotted deeppink; padding: 8px 22px; border-radius: 8px"
>
  <h1>
    My name is Jane,
  </h1>
  <h3>
    today is January 20, 2017
  </h3>
  <p>
    I have a stock of 20 apples, costing &dollar;2.25 each.
  </p>
  <p>
    Also, I have:
  </p>
  <ul>
    <li>
      Laptop
    </li>
    <li>
      Book
    </li>
    <li>
      Whiskey
    </li>
  </ul>
  <p>
    Nice to meet you!
  </p>
</div>
`;

exports[`Storyshots Addons|Knobs Simple 1`] = `
<div>
  I am John Doe and I'm 44 years old.
</div>
`;

exports[`Storyshots Addons|Links Go To Welcome 1`] = `
<button
  class="button"
  onclick={[Function]}
>
  This button links to Welcome
</button>
`;

exports[`Storyshots Addons|Notes Note With Html 1`] = `
<p>
  <span>
    🤔😳😯😮
  </span>
  <br />
  <span>
    😄😩😓😱
  </span>
  <br />
  <span>
    🤓😑😶😊
  </span>
</p>
`;

exports[`Storyshots Addons|Notes Simple Note 1`] = `
<p>
  <strong>
    Etiam vulputate elit eu venenatis eleifend. Duis nec lectus augue. Morbi egestas diam sed vulputate mollis. Fusce egestas pretium vehicula. Integer sed neque diam. Donec consectetur velit vitae enim varius, ut placerat arcu imperdiet. Praesent sed faucibus arcu. Nullam sit amet nibh a enim eleifend rhoncus. Donec pretium elementum leo at fermentum. Nulla sollicitudin, mauris quis semper tempus, sem metus tristique diam, efficitur pulvinar mi urna id urna.
  </strong>
</p>
`;

exports[`Storyshots Button With Some Emoji 1`] = `
<button
  class="button"
  onclick={[Function]}
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button With Text 1`] = `
<button
  class="button"
  onclick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Welcome To Storybook 1`] = `
<article
  style={
    Object {
      "backgroundColor": "#ffffff",
      "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
      "lineHeight": 1.4,
      "padding": 15,
    }
  }
>
  <h1>
    Welcome to storybook for Preact
  </h1>
  <img
    alt="Preact logo"
    src="./logo.png"
    style={
      Object {
        "display": "block",
        "height": "150px",
        "margin": "0 auto",
        "text-align": "center",
      }
    }
  />
  <p>
    This is a UI component dev environment for your Preact app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottom": "1px solid #1474f3",
          "borderLeft": "none",
          "borderRight": "none",
          "borderTop": "none",
          "color": "#1474f3",
          "cursor": "pointer",
          "font": "inherit",
          "padding": 0,
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      type="button"
    >
      stories
    </button>
     for a component called 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
     stories located at 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the 
    <a
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      Writing Stories
    </a>
     section in our documentation.
  </p>
  <p
    style={
      Object {
        "opacity": 0.5,
      }
    }
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
